--- a/databricks.yml
+++ b/databricks.yml
@@ -12,8 +12,13 @@ include:
 variables:
   catalog:
     description: The catalog to use
+    default: hive_metastore
   schema:
     description: The schema to use
+    default: dev
+  notification_email:
+    description: Email for job notifications
+    default: john.chernoff@arcurve.com
 
 targets:
   dev:
@@ -30,15 +35,17 @@ targets:
       schema: dev
     presets:
       artifacts_dynamic_version: true
+
   prod:
     mode: production
     workspace:
       host: https://adb-2921744191194256.16.azuredatabricks.net
-      # We explicitly deploy to /Workspace/Users/john.chernoff@arcurve.com to make sure we only have a single copy.
-      root_path: /Workspace/Users/john.chernoff@arcurve.com/.bundle/${bundle.name}/${bundle.target}
+      root_path: /Workspace/prod/weather_pipeline
     variables:
       catalog: hive_metastore
       schema: prod
     permissions:
-      - user_name: john.chernoff@arcurve.com
+      - group_name: "administrators"
         level: CAN_MANAGE
+      - group_name: "data-engineers"
+        level: CAN_VIEW
