--- a/resources/weather_ingest_job.yml
+++ b/resources/weather_ingest_job.yml
@@ -1,19 +1,16 @@
-# A sample job for weather_pipeline.
-
 resources:
   jobs:
-    sample_job:
-      name: sample_job
+    weather_data_ingest:
+      name: "[${bundle.target}] Weather Data Ingestion"
 
       trigger:
-        # Run this job every day, exactly one day from the last run; see https://docs.databricks.com/api/workspace/jobs/create#trigger
         periodic:
           interval: 1
           unit: DAYS
 
-      #email_notifications:
-      #  on_failure:
-      #    - your_email@example.com
+      email_notifications:
+        on_failure:
+          - ${var.notification_email}
 
       parameters:
         - name: catalog
@@ -22,9 +19,9 @@ resources:
           default: ${var.schema}
 
       tasks:
-        - task_key: notebook_task
+        - task_key: ingest_weather
           notebook_task:
-            notebook_path: ../src/sample_notebook.ipynb
+            notebook_path: ../src/weather_fetcher.ipynb
           job_cluster_key: job_cluster
 
       job_clusters:
@@ -35,4 +32,4 @@ resources:
             data_security_mode: SINGLE_USER
             autoscale:
               min_workers: 1
-              max_workers: 4
+              max_workers: 1
